Fixed api docs page cutting off at bottom because of nav if the page height is small enough to scroll.

--- a/WebSite/styling/_api-docs-page.scss
+++ b/WebSite/styling/_api-docs-page.scss
@@ -4,6 +4,8 @@
     margin: 0 auto;
     margin-top: 50px;
     padding: 0 20px;
+    margin-bottom: 28px;
+    padding-bottom: 20px;
 
     & .route
     {
